istio-1.15.2/vsvc-kiali.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-istio-virtual-svc
spec:
  gateways:
  - kiali-istio-gateway 
  hosts:
  - kiali.imagina.k8s.io
  http:
  - route:
    - destination:
        port:
          number: 20001
        host: kiali
